# dpdk-sq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  Makefile  README.md  VERIFICATION.md
.github/workflows/: ci.yml
dpdk/: Cargo.toml  README.md
dpdk-sys/: Cargo.toml  README.md  build.rs  wrapper.h
dpdk-sys/src/: lib.rs
dpdk/src/: eal.rs  error.rs  lib.rs  mbuf.rs  mempool.rs
examples/basic-init/: Cargo.toml
examples/basic-init/src/: main.rs
